# monet

./: .gitignore  LICENSE  README.md  bun.lockb  package-lock.json  package.json  vite.config.ts
api/: pyproject.toml
api/app/: config.py  dependencies.py  main.py  models.py  video_processing.py
api/app/routes/: upload.py  videos.py
src/: app.tsx  main.tsx
src/components/: Modal.tsx  apiAlive.tsx  buttons.tsx  canvas.tsx  frameModal.tsx  segModal.tsx  selectVideo.tsx  upload.tsx  uploadVideo.tsx
src/hooks/: useVideoFrames.ts
src/icons/: check.tsx  chevronDown.tsx  chevronUp.tsx  type.tsx  xMark.tsx
src/types/: canvas.tsx
